# robot_privacy_detection

./: README.md
ascc_homebot_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml  package.xml  rviz_navigation_config.rviz
ascc_homebot_2dnav/launch/: amcl_diff.launch  ascc_homebot_drivers.launch  move_base.launch  start_navigation_privacy.launch
ascc_homebot_2dnav/maps/: testbed1.yaml  testbed2.pgm  testbed2.yaml  testbed_mod.pgm  testbed_mod.yaml
ascc_homebot_2dnav/scripts/: publish_initial_pose.py
nakedness_detection_googlenet/: CMakeLists.txt  package.xml
nakedness_detection_googlenet/launch/: nakedness_detection.launch
nakedness_detection_googlenet/model/: nakedness_detection_label_map_proto.pbtxt  nakedness_detection_labels.txt
nakedness_detection_googlenet/scripts/: nakedness_detection.py
pir_location_receiver/: CMakeLists.txt  package.xml
pir_location_receiver/XBee_Configuration/: XBEE-coordinator.pro
pir_location_receiver/scripts/: PIR_receiver.py
privacy_controller/: CMakeLists.txt  package.xml
privacy_controller/launch/: start_controller.launch
privacy_controller/scripts/: robot_controller.py  robot_controller_testing.py
robot_talks/: CMakeLists.txt  package.xml
robot_talks/scripts/: robot_talks.py
