<?xml version="1.0"?>
<package>
  <name>privacy_controller</name>
  <version>0.0.0</version>
  <description>The privacy_controller package</description>

  <maintainer email="francisco@todo.todo">francisco</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ascc_homebot_2dnav</build_depend>
  <build_depend>pir_receiver_no_socket</build_depend>
  <build_depend>robot_talks</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>ascc_homebot_2dnav</run_depend>
  <run_depend>pir_receiver_no_socket</run_depend>
  <run_depend>robot_talks</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
